src/tess/tl/test/pass/test_c_div.tl
#module main
#import <cstdlib.tl>

main() {
    res := c_div(10, 3)
    res.rem - 1
}
