src/tess/tl/test/fail/test_fail_float_narrowing_return.tl
#module main

// Narrowing: Function returns CDouble, declared -> CFloat should fail.

get_value() -> CDouble { 3.14 }

narrow_return() -> CFloat {
    get_value()
}

main() {
    narrow_return()
    0
}
